--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
 body {
     max-width: 756px;
     margin: 0 auto;
+    padding: 1em;
     font-size: 14pt;
 }
 
@@ -25,4 +26,10 @@ ol li {
     font-weight: 300;
     font-size: 12pt;
     margin-top: 14pt;
+}
+
+iframe {
+    max-width: 560px;
+    width: 100%;
+    aspect-ratio: 16 / 9;
 }
